@@ -28,6 +28,7 @@ GetOptions(
     'q|quiet'    => \my $QUIET,
     'Q|QUIET'    => \my $REALLY_QUIET,
     'e|exec=s'   => \my $EXEC,
+    'm|merge'    => \my $MERGE,
     'I=s@'       => \my @INCLUDES,
     'directives' => \my $DIRECTIVES,
     'h|help|?'   => sub { pod2usage( { -verbose => 1 } ); exit },
@@ -73,6 +74,7 @@ if ( $WARNINGS_FAIL && $WARNINGS_WARN ) {
 my %args;
 $args{lib}          = get_libs();
 $args{switches}     = get_switches();
+$args{merge}        = $MERGE if $MERGE;
 $args{verbose}      = $VERBOSE if $VERBOSE;
 $args{failures}     = $FAILURES if $FAILURES;
 $args{quiet}        = 1 if $QUIET;
@@ -191,6 +193,7 @@ Boolean options
  -c,  --color       Colored test output (default).  See TAP::Harness::Color.
       --nocolor     Do not color test output.
  -f,  --failures    Only show failed tests.
+ -m,  --merge       Merge test scripts' STDERR with their STDOUT.
  -r,  --recurse     Recursively descend into directories.
  -q,  --quiet       Suppress some test output while running tests.
  -Q,  --QUIET       Only print summary results.
@@ -245,6 +248,21 @@ switch:
  runtests --exec '/usr/bin/ruby -w' t/
  runtests --exec '/usr/bin/perl -Tw -mstrict -Ilib' t/
  runtests --exec '/path/to/my/customer/exec'
+
+=head2 C<--merge>
+
+If you need to make sure your diagnostics are displayed in the correct
+order relative to test results you can use the C<--merge> option to
+merge the test scripts' STDERR into their STDOUT. 
+
+This guarantees that STDOUT (where the test results appear) and STDOUT
+(where the diagnostics appear) will stay in sync. The harness will
+display any diagnostics your tests emit on STDERR.
+
+Caveat: this is a bit of a kludge. In particular note that if anything
+that appears on STDERR looks like a test result the test harness will
+get confused. Use this option only if you understand the consequences
+and can live with the risk.
 
 =head1 PERFORMANCE
 
